style(next): dropdown menus: fix the scrollbar background for Chromium-based browsers

--- a/src/public/stylesheets/theme-next/shell.css
+++ b/src/public/stylesheets/theme-next/shell.css
@@ -962,6 +962,10 @@ body.mobile .note-title {
     font-size: 0.9rem !important;
 }
 
+.dropdown-menu::-webkit-scrollbar-track {
+    background: var(--menu-background-color);
+}
+
 body.mobile .dropdown-menu {
     backdrop-filter: var(--dropdown-backdrop-filter);
     border-radius: var(--dropdown-border-radius);
